# Sigma

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
apps/: README.md
apps/api/: README.md
apps/api/tests/: test_api_scaffold.py  test_storage.py
apps/web/: README.md
docs/: README.md  ai-investment-research-studio-codex-context.md  ai-investment-research-studio-mvp-scope.md  architecture.md  mvp-product-spec.md  mvp-technical-requirements.md  product.md  project-layout.md  status-and-roadmap.md
docs/product/: evolution-plan.md  north-star.md  status-and-roadmap.md
docs/technical/: api.md  architecture.md
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts
frontend/scripts/: e2e-web-server.sh
frontend/tests/e2e/: workflow.spec.ts
frontend_prototype/: .thumbnail  support.js  投資工作室.dc.html
scripts/: check_commit_message.py
services/: README.md
services/evidence-service/: README.md
services/ingestion/: README.md
services/research-orchestrator/: README.md
services/thesis-registry/: README.md
services/trading-committee/: README.md
src/source_tools/: __init__.py  ai.py
src/source_tools/transcribers/: __init__.py  groq.py  nemotron.py
src/studio_api/: __init__.py  dependencies.py  main.py  openapi.py  storage.py
src/studio_api/routers/: __init__.py  committee.py  decisions.py  health.py  (+1 more)
src/studio_domain/: __init__.py  rules.py
src/studio_schemas/: __init__.py  api.py  enums.py  models.py
src/studio_workflows/: __init__.py  artifacts.py  committee.py  fixtures.py  planner.py  runner.py
tests/source_tools/: test_source_tools_ai.py  test_source_tools_media.py  test_source_tools_rss.py
tests/studio_api/: test_api_scaffold.py  test_project_workflow_api.py
tests/studio_domain/: test_rules.py
tests/studio_schemas/: test_studio_schemas.py
tests/studio_workflows/: test_committee.py  test_fixtures.py  test_runner.py
