[project]
name = "source-tools"
version = "0.1.0"
description = "Reusable RSS, transcript, ASR, and LLM content tools for agent workflows"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "pydantic-ai>=0.0.49",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/source-tools/src/source_tools"]

[tool.hatch.build.targets.sdist]
include = [
    "packages/source-tools/src",
    "packages/source-tools/tests",
    "pyproject.toml",
]

[project.optional-dependencies]
asr = [
    "faster-whisper>=1.0",
    "groq>=0.8",
    "sherpa-onnx>=1.13.3",
    "sherpa-onnx-core>=1.13.3",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 200

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
