[project]
name = "source-tools"
version = "0.1.0"
description = "Reusable RSS, transcript, ASR, and LLM content tools for agent workflows"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128",
    "feedparser>=6.0",
    "httpx>=0.27",
    "pydantic-ai>=0.0.49",
    "uvicorn>=0.35",
]

[tool.uv]
package = false

[project.optional-dependencies]
asr = [
    "faster-whisper>=1.0",
    "groq>=0.8",
    "sherpa-onnx>=1.13.3",
    "sherpa-onnx-core>=1.13.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest",
    "pytest-asyncio",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
    "src",
]

[tool.ruff]
line-length = 200
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["source_tools", "studio_api", "studio_domain", "studio_schemas", "studio_workflows"]

[tool.ruff.format]
quote-style = "double"
